--- a/SCP-3737-J.md
+++ b/SCP-3737-J.md
@@ -1,1 +1,11 @@
+## SCP-3737-J ##
 
+Containment Class: Keter
+Special Containment Procedures: SCP-3737-J is to be locked in a 9x9x9 room at Site-██ with 4 level 5 MTF personnel at all times. Under **NO CIRCUMSTANCES** will SCP-3737-J be allowed access to a computer unless O5-1 is present. All personnel are to refrain from communicating with SCP-3737-J.
+
+Description: SCP-3737 is a nineteen(19) year old male named Henry who posesses the ability to make penises and swastikas from seemingly normal textures. SCP-3737-J is known to put beans in clocks if given the chance, and has been known to [DATA EXPUNGED]. All images that contain SCP-3737-J will turn into photos of dildos after 120 minutes. As such, no photos of SCP-3737-J are available.
+
+
+
+----
+# CONTENT CORRUPTED #
